<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/idMutation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Hint0"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="20sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <EditText
        android:id="@+id/local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Hint1"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="20sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <EditText
        android:id="@+id/nbpiecesPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pieces"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="20sp"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <EditText
        android:id="@+id/surfaceTerrain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surface"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="20sp"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />
    <EditText
        android:id="@+id/surfaceRelleBatiment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surface_bati"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="20sp"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/estimate" />





</LinearLayout>
